v1.2 fix flex align

--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     display: flex;
     flex-direction: column;
-    align-items: end;
     padding: 10px 25px;
+    max-width: 310px;
 }
 
 .box__supervisor {
@@ -62,6 +62,7 @@ p {
 
 .box__img {
     padding: 20px;
+    align-self: flex-end;
 }
 
 .attribution {
